# discord-protos

./: .gitignore  .prettierrc.yml  LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py  tsconfig.json
.github/actions/: update.yml
.github/workflows/: update.yml
discord_protos/: AcknowledgedApplicationDisclosures.proto  AcknowledgedApplicationDisclosures_pb2.py  ApplicationUserRoleConnection.proto  ApplicationUserRoleConnection_pb2.py  FrecencyUserSettings.proto  FrecencyUserSettings_pb2.py  GuildSettings.proto  PreloadedUserSettings.proto  PreloadedUserSettings_pb2.py  PremiumMarketingComponentProperties.proto  PremiumMarketingComponentProperties_pb2.py  __init__.py
discord_protos/discord_kkv_store_value_models/v1/: AcknowledgedApplicationDisclosures_pb2.py  ApplicationUserRoleConnection_pb2.py
discord_protos/discord_users/v1/: FrecencyUserSettings_pb2.py  PreloadedUserSettings.proto  PreloadedUserSettings_pb2.py
discord_protos/premium_marketing/v1/: PremiumMarketingComponentProperties_pb2.py
scripts/: parse.js  preload.js
src/: index.d.ts  index.js  index.ts  load.js  load.ts  parse.js  proto.d.ts  proto.js  test.js  test.ts
src/proto/: AcknowledgedApplicationDisclosures.ts  ApplicationUserRoleConnection.ts  FrecencyUserSettings.ts  PreloadedUserSettings.ts  PremiumMarketingComponentProperties.ts
src/proto/discord_kkv_store_value_models/v1/: AcknowledgedApplicationDisclosures.ts  ApplicationUserRoleConnection.ts
src/proto/discord_users/v1/: FrecencyUserSettings.ts  PreloadedUserSettings.ts
src/proto/google/protobuf/: timestamp.ts  (+1 more)
(+1 files in other folders)
